[workspace]
members = [
  "derive-num-bounded",
  "optimal-binary",
  "optimal-core",
  "optimal-linesearch",
  "optimal-pbil",
]

[package]
name = "optimal"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Mathematical optimization and machine learning framework and algorithms"
repository = "https://github.com/justinlovinger/optimal-rs"
readme = "README.md"
keywords = ["ai", "machine-learning", "optimization"]
categories = ["science", "mathematics"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[dependencies]
optimal-pbil = { path = "optimal-pbil", version = "0.0.0" }
optimal-linesearch = { path = "optimal-linesearch", version = "0.0.0" }
rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
