[package]
name = "derive-num-bounded"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Macros for implementing bounded number types"
repository = "https://github.com/justinlovinger/optimal-rs/tree/master/derive-num-bounded"
readme = "README.md"
keywords = ["macro"]
categories = ["rust-patterns"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[dependencies]
paste = "1.0.14"
thiserror = "1.0.47"

[dev-dependencies]
