[package]
name = "optimal-binary"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Utilities for working with binary optimizers"
repository = "https://github.com/justinlovinger/optimal-rs"
readme = "README.md"
keywords = ["optimization", "binary"]
categories = ["science", "mathematics"]
license = "MIT"

[features]
serde = ["dep:serde"]

[dependencies]
num-traits = "0.2.16"
serde = { version = "1.0.185", features = ["derive"], optional = true }

[dev-dependencies]
