[package]
name = "optimal-binary"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Utilities for working with binary optimizers"
repository = "https://github.com/justinlovinger/optimal-rs/tree/master/optimal-binary"
readme = "README.md"
keywords = ["optimization", "binary"]
categories = ["science", "mathematics"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[features]
serde = ["dep:serde"]

[dependencies]
itertools = "0.13.0"
num-traits = "0.2.16"
computation-types = { path = "../computation-types", version = "0.0.0" }
serde = { version = "1.0.185", features = ["derive"], optional = true }

[dev-dependencies]
