[package]
name = "optimal-linesearch"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of line-search optimizers"
repository = "https://github.com/justinlovinger/optimal-rs/tree/master/optimal-linesearch"
readme = "README.md"
keywords = ["optimization", "gradient-descent", "line-search"]
categories = ["science", "mathematics"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[[bench]]
name = "benchmark"
harness = false

[features]
serde = ["dep:serde", "ndarray/serde"]

[dependencies]
derive_builder = "0.13.0"
derive-num-bounded = { path = "../derive-num-bounded", version = "0.0.0" }
derive-getters = "0.3.0"
derive_more = "0.99.17"
num-traits = "0.2.16"
optimal-compute-core = { path = "../optimal-compute-core", version = "0.0.0" }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.185", features = ["derive", "rc"], optional = true }
thiserror = "1.0.47"
ndarray = "0.15.6"

[dev-dependencies]
approx = "0.5.1"
tango-bench = "0.5.0"
