[package]
name = "optimal-pbil"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of population-based incremental learning (PBIL)"
repository = "https://github.com/justinlovinger/optimal-rs"
readme = "README.md"
keywords = ["optimization", "pbil"]
categories = ["science", "mathematics"]
license = "MIT"

[features]
serde = ["dep:serde", "ndarray/serde", "rand/serde1", "rand_xoshiro/serde1"]

[dependencies]
default-for = { path = "../default-for" }
derive-bounded = { path = "../derive-bounded" }
derive-getters = "0.3.0"
derive_more = "0.99.17"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
num-traits = "0.2.16"
once_cell = "1.18.0"
optimal-core = { path = "../optimal-core" }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
replace_with = "0.1.7"
serde = { version = "1.0.185", features = ["derive"], optional = true }
streaming-iterator = "0.1.9"
thiserror = "1.0.47"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
