[package]
name = "optimal-pbil"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of population-based incremental learning (PBIL)"
repository = "https://github.com/justinlovinger/optimal-rs/tree/master/optimal-pbil"
readme = "README.md"
keywords = ["optimization", "pbil"]
categories = ["science", "mathematics"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[features]
serde = ["dep:serde", "rand/serde1", "rand_xoshiro/serde1"]

[dependencies]
derive-num-bounded = { path = "../derive-num-bounded", version = "0.0.0" }
derive-getters = "0.3.0"
derive_more = "0.99.17"
num-traits = "0.2.16"
optimal-core = { path = "../optimal-core", version = "0.0.0" }
partial-min-max = "0.4.0"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
replace_with = "0.1.7"
serde = { version = "1.0.185", features = ["derive"], optional = true }
streaming-iterator = "0.1.9"
thiserror = "1.0.47"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
