[package]
name = "optimal-pbil"
version = "0.0.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of population-based incremental learning (PBIL)"
repository = "https://github.com/justinlovinger/optimal-rs/tree/master/optimal-pbil"
readme = "README.md"
keywords = ["optimization", "pbil"]
categories = ["science", "mathematics"]
license = "MIT"

[badges]
github = { repository = "justinlovinger/optimal-rs", workflow = "build" }

[[bench]]
name = "benchmark"
harness = false

[features]
serde = ["dep:serde", "rand/serde1"]

[dependencies]
derive_builder = "0.13.0"
derive-getters = "0.3.0"
derive-num-bounded = { path = "../derive-num-bounded", version = "0.0.0" }
derive_more = "0.99.17"
num-traits = "0.2.16"
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1.0.185", features = ["derive"], optional = true }
thiserror = "1.0.47"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.2.0"
serde = "1.0.185"
serde_json = "1.0.111"
test-strategy = "0.3.1"
