[package]
name = "optimal-steepest"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of steepest descent optimizers"
repository = "https://github.com/justinlovinger/optimal-rs"
readme = "README.md"
keywords = ["optimization", "steepest-descent", "line-search"]
categories = ["science", "mathematics"]
license = "MIT"

[features]
serde = ["dep:serde", "ndarray/serde"]

[dependencies]
default-for = { path = "../default-for" }
derive-bounded = { path = "../derive-bounded" }
derive-getters = "0.3.0"
derive_more = "0.99"
ndarray = "0.15"
ndarray-rand = "0.14"
num-traits = "0.2"
once_cell = "1.17.1"
optimal = { path = ".." }
rand = "0.8"
replace_with = "0.1"
serde = { version = "1", features = ["derive"], optional = true }
streaming-iterator = "0.1"
thiserror = "1.0.40"

[dev-dependencies]
proptest = "1"
test-strategy = "0.2.1"
