[package]
name = "optimal-steepest"
version = "0.1.0"
edition = "2021"
authors = ["Justin Lovinger"]
description = "Implementation of steepest descent optimizers"
repository = "https://github.com/justinlovinger/optimal-rs"
readme = "README.md"
keywords = ["optimization", "steepest-descent", "line-search"]
categories = ["science", "mathematics"]
license = "MIT"

[features]
serde = ["dep:serde"]

[dependencies]
default-for = { path = "../default-for" }
derive-bounded = { path = "../derive-bounded" }
derive-getters = "0.3.0"
derive_more = "0.99.17"
num-traits = "0.2.16"
once_cell = "1.18.0"
optimal-core = { path = "../optimal-core" }
rand = "0.8.5"
replace_with = "0.1.7"
serde = { version = "1.0.185", features = ["derive"], optional = true }
streaming-iterator = "0.1.9"
thiserror = "1.0.47"

[dev-dependencies]
proptest = "1.2.0"
test-strategy = "0.3.1"
